# hatch

./: .env  .gitignore  deploy.bat  index.html  package-lock.json  package.json  package_setup.sql  supabase.js  supabase_auth_schema.sql  supabase_dashboard_schema.sql  supabase_orders_schema.sql  supabase_schema.sql  supabase_security_schema.sql  supabase_zone_schema.sql
api/: usage.js
s7pro apk/oat/arm64/: base.art  base.odex
scratch/: test_sheets.js
src/: App.jsx  Home.jsx  Login.jsx  MapView.jsx  PointLauncher.jsx  PosTest.jsx  Settings.jsx  ZoneSetup.jsx  index.css  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  okpos_watcher.rs  printer.rs
src/config/: tenant.js
src/pages/admin/: AdminDashboard.jsx  AdminLogin.jsx
src/pages/web/: LandingPage.jsx
wuri-agent/: Cargo.toml  build_agent.bat  config.json  wuri-agent.ps1  실행.bat
wuri-agent/src/: main.rs  printer.rs  watcher.rs
